Rewards alignment fixes

--- a/tabs/src/components/RewardsComponent.module.css
+++ b/tabs/src/components/RewardsComponent.module.css
@@ -1,12 +1,11 @@
 .mainContainer {
-    width: 100%;
+    width: 1052px;
     height: 565px;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 20px;
-    bottom: 20px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     border: 20px solid rgba(31, 31, 31, 1);
+    border-top: 0px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14), 0px 0px 1px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     background-color: #2d2b2c;
